Update origin filter

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -170,15 +170,7 @@
                 <input class="origin-checkbox" type="checkbox" value="indigenous" name="category-value" style="display: none" id="indigenous"/>
                 <input class="origin-checkbox" type="checkbox" value="translocated" name="category-value" style="display: none" id="translocated"/>
                 <div class="smaller-font btn-group btn-group-sm">
-                    <button id="non-native-origin-btn" type="button" class="btn origin-btn btn-secondary dropdown-toggle" data-origin="non-native" data-toggle="dropdown">Non-Native</button>
-                    <div class="non-native-origin-dropdown dropdown-menu origin-menu">
-                        <li class="dropdown-item non-native-dropdown-item" id="alien-origin-checkbox" data-non-native-value="alien">
-                            <input class="non-native-checkbox" name="non-native-value" type="checkbox" value="alien"> Alien
-                        </li>
-                        <li class="dropdown-item non-native-dropdown-item" id="extralimital-origin-checkbox" data-non-native-value="translocated">
-                            <input class="non-native-checkbox" name="non-native-value" type="checkbox" value="translocated"> Extralimital
-                        </li>
-                    </div>
+                    <button id="non-native-origin-btn" type="button" class="btn origin-btn btn-secondary">Non-Native</button>
                 </div>
                 <div class="smaller-font btn-group btn-group-sm" role="group" aria-label="First group">
                     <button id="native-origin-btn" type="button" class="btn origin-btn btn-secondary dropdown-toggle" data-origin="indigenous" data-toggle="dropdown">Native</button>
