Change legend color

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1669,7 +1669,7 @@ div:hover::-webkit-scrollbar {
 }
 
 .bio-one-site {
-    background-color: #238f1c;
+    background-color: #18A090;
 }
 
 .bio-cluster-low {
