--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -62,5 +62,9 @@
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/libs/chart/Chart-2.7.2.js" %}"></script>
     <script src="{% static "js/landing-page.js" %}"></script>
-
+    <script>
+        $(document).ready(function () {
+            showSiteNotice();
+        });
+    </script>
 {% endblock %}
