--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -62,7 +62,10 @@
                         {% endif %}
                     {% endfor %}
             {% endif %}
-            <h2 class="dashboard-title">SASS Dashboard</h2>
+            <div class="dashboard-title">
+                <h2>SASS Dashboard</h2>
+                <div class="dashboard-close"><i class="fa fa-times" aria-hidden="true"></i></div>
+            </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="map-container">
@@ -350,5 +353,6 @@
     <script src="{% static "js/libs/htmlToCanvas/html2canvas.js" %}"></script>
     <script src="{% static "js/utils/download_csv.js" %}"></script>
     <script src="{% static "js/sass_dashboard.js" %}"></script>
+    <script src="{% static "js/sass_dashboard_close.js" %}"></script>
 
 {% endblock %}
