--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -233,7 +233,7 @@
             <div class="col-4 value-column"><%= geomorphological_zone %></div>
         </div>
         <div class="row">
-            <div class="col-8 caption-column">Ecological Region</div>
+            <div class="col-8 caption-column">Ecological Region level 1</div>
             <div class="col-4 value-column"><%= ecological_region %></div>
         </div>
         <div class="row">
