--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -8,7 +8,7 @@
             </div>
         </div>
         <h2 class="dashboard-header" style="margin-left: 15px; margin-right: 15px">
-            Taxa Dashboard
+            Taxon Dashboard
         </h2>
         <div class="detailed-dashboard-title">&nbsp;</div>
         <button class="btn btn-primary btn-dashboard close-dashboard"
