--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -100,12 +100,14 @@
                     <input type="text" class="form-control" name="date" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} readonly>
                 </div>
                 <div class="form-group">
-                    <label for="time" class="input-label">Time :</label>
-                    <input type="text" class="form-control" id="time" name="time" {% if time %} value="{{ time|time:"H:i" }}" {% endif %} readonly>
-                </div>
-                <div class="form-group">
                     <label for="assessor" class="input-label">Assessor :</label>
                     <input type="text" class="form-control" id="assessor" {% if assessor %} value="{{ assessor.first_name }} {{ assessor.last_name }}" {% endif %} readonly>
+                </div>
+                <div class="form-check form-group">
+                    <input class="form-check-input" type="radio" disabled {% if accredited %} checked {% endif %} id="accredited" name="accredited">
+                    <label class="form-check-label" for="accredited" style="padding-top: 10px;">
+                        Accredited at the time of collection
+                    </label>
                 </div>
                 <div class="form-group">
                     <label for="data-source" class="input-label">Source :</label>
