--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -80,13 +80,15 @@
                     <input type="text" class="form-control" id="date" name="date" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} >
                 </div>
                 <div class="form-group">
-                    <label for="time" class="input-label">Time :</label>
-                    <input type="text" class="form-control" id="time" name="time" {% if time %} value="{{ time|time:"H:i" }}" {% endif %} >
-                </div>
-                <div class="form-group">
                     <label for="assessor" class="input-label">Assessor :</label>
                     <input type="text" class="form-control" id="assessor" {% if assessor %} value="{{ assessor.first_name }} {{ assessor.last_name }}" {% endif %} >
                     <input type="hidden" id="assessor_id" name="assessor" {% if assessor %} value="{{ assessor.id }}" {% endif %}>
+                </div>
+                <div class="form-check form-group">
+                    <input class="form-check-input" type="radio" {% if accredited %} checked {% endif %} id="accredited" name="accredited">
+                    <label class="form-check-label" for="accredited" style="padding-top: 10px;">
+                        Accredited at the time of collection
+                    </label>
                 </div>
                 <div class="form-group">
                     <label for="data-source" class="input-label">Source :</label>
