Change default map to only displays FBIS data

--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -18,7 +18,7 @@
         const location_site_long = '{{ location_site_long }}';
         const geoserverPublicUrl = '{{ geoserver_public_location }}';
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
-        const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
+        const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
     </script>
 
 {% endblock %}
