--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -49,6 +49,9 @@
             </div>
         {% endif %}
 
+        <div class="source-collection-wrapper">
+        </div>
+
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 VALIDATION STATUS <i
@@ -255,10 +258,6 @@
                 </div>
             </div>
         {% endif %}
-
-         <div class="source-collection-wrapper"></div>
-
-        </div>
 </script>
 
 
