--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -60,9 +60,10 @@
             conservationStatusData = {{ conservation_status_data | safe }};
         {% endif %}
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
-        const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
+        const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
         const emptyWMSSiteParameter = '{{ bims_preferences.empty_location_site_cluster }}';
         const isStaff = {% if user.is_superuser or user.is_staff %} true {% else %} false {% endif %};
+        const mapDefaultSelectedFilters = '{{ preferences.SiteSetting.map_default_filters | safe}}';
     </script>
     {% block extra_head %}
 
