--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -88,10 +88,14 @@
                 <label for="site_name"
                        class="col-sm-2 col-form-label col-form-label">Site
                     Code*</label>
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <input type="text" name="site_code" id="site_code"
                            class="form-control form-control-sm"
                            placeholder="" value="{{ site_code }}" required {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
+                    <small id="siteCodeHelp" class="form-text text-muted">
+                        The following standard has been adopted for naming site code:
+                        Secondary catchment code, 1st four letters of river name, 1st five letters of location. E.g. X2CROC-VELOR (Crocodile River @ Veloren Vallei Nature Reserve)
+                    </small>
                     <input type="hidden" name="river" id="river">
                     <input type="hidden" name="catchment_geocontext" id="catchment_geocontext">
                 </div>
@@ -105,7 +109,7 @@
             <div class="form-group row">
                 <label for="site_name"
                        class="col-sm-2 col-form-label col-form-label">Geomorphological Zone</label>
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <input type="text" name="geomorphological_zone" id="geomorphological_zone"
                            class="form-control form-control-sm"
                            placeholder="" value="{{ original_geo_zone }}" readonly>
