Revert "Update geonode version to stable one (#1532)"
This reverts commit 2672af416752032dd273a1881abdb27ec34c0331.

--- a/bims/templates/documents/document_base.html
+++ b/bims/templates/documents/document_base.html
@@ -10,4 +10,5 @@
   {% block body %}{% endblock body %}
   {% block sidebar %}{% endblock sidebar %}
 
+{% block footer  %}{% endblock footer %}
 {% endblock body_outer %}
