--- a/bims/templates/people/profile_bims_base.html
+++ b/bims/templates/people/profile_bims_base.html
@@ -9,5 +9,6 @@
 {% block body_outer %}
 {% block body %}{% endblock body %}
 {% block sidebar %}{% endblock sidebar %}
+{% block footer  %}{% endblock footer %}
 
 {% endblock body_outer %}
