--- a/bims/templates/documents/document_thumb_upload.html
+++ b/bims/templates/documents/document_thumb_upload.html
@@ -8,6 +8,8 @@
 {% block body_class %}data documents upload{% endblock body_class %}
 
 {% block head %}
+    {% include "geoext/ext_header.html" %}
+    {% include "geoext/app_header.html" %}
     {{ block.super }}
 {% endblock %}
 
@@ -50,7 +52,7 @@
           <h4>{% trans "Files to be uploaded" %}</h4>
           <div id="file-queue"></div>
           <div class="checkbox" style="display:none;" id="style_upload_form_check">
-              {% trans "Is Upload Metadata XML Form" %} <input type="checkbox" name="style_upload_form" id="id_style_upload_form" checked="true"/>
+              Is Upload Metadata XML Form <input type="checkbox" name="style_upload_form" id="id_style_upload_form" checked="true"/>
               <input type="text" name="layer_title" id="id_layer_title" value="{{ resource.alternate }}"/>
           </div>
         </section>
@@ -77,13 +79,15 @@
 
 {% block extra_script %}
     {{ block.super }}
-    <script data-main="{% static 'geonode/js/upload/main' %}"
+    <!-- Fix pipeline error -->
+    <script data-main="{{ STATIC_URL }}geonode/js/upload/main"
       src="{% static 'lib/js/require.js' %}">
     </script>
     <script type="text/javascript">
     {% autoescape off %}
       csrf_token =  "{{ csrf_token }}",
       form_target = "{% url "document_thumb_upload" docid=resource.id %}",
+      geogig_enabled = {{ GEOGIG_ENABLED|lower  }},
       time_enabled = false,
       mosaic_enabled = false,
       userLookup = "{% url "account_ajax_lookup" %}"
