--- a/bims/templates/documents/document_upload.html
+++ b/bims/templates/documents/document_upload.html
@@ -7,6 +7,8 @@
 {% block body_class %}documents upload{% endblock body_class %}
 
 {% block head %}
+    {% include "geoext/ext_header.html" %}
+    {% include "geoext/app_header.html" %}
     {{ block.super }}
 {% endblock %}
 
