--- a/bims/templates/base.html
+++ b/bims/templates/base.html
@@ -45,6 +45,10 @@
     <![endif]-->
     <link rel="search" type="application/opensearchdescription+xml" href="/catalogue/opensearch" title="GeoNode Search"/>
   </head>
+  <script>
+      var siteUrl = '{{ SITEURL }}'.replace(/\/?$/, '/');
+      var staticUrl = '{% static '' %}';
+  </script>
 
   <body class="{% block body_class %}{% endblock %}">
     <!-- Navbar -->
