Standardize dashboard titles

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 
 {% block subtitle %}
-    SASS Dashboard Multiple Sites
+    Multiple Sites Dashboard - SASS
 {% endblock %}
 
 {% block head %}
@@ -34,7 +34,7 @@
                                                     src="{% static 'img/bims-stamp.png' %}">
         </div>
         <div class="dashboard-title">
-            <h2> SASS Dashboard Multiple Sites
+            <h2> Multiple Sites Dashboard - SASS
                 <span id="current_page"></span><span id="total_pages"></span>
             </h2>
             <div class="dashboard-close"><i class="fa fa-times" aria-hidden="true"></i></div>
