--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -3,7 +3,7 @@
 {% load static from staticfiles %}
 
 {% block subtitle %}
-    SASS Dashboard Single Site
+    Single Site Dashboard - SASS
 {% endblock %}
 
 {% block head %}
@@ -63,7 +63,7 @@
                     {% endfor %}
             {% endif %}
             <div class="dashboard-title">
-                <h2>SASS Dashboard</h2>
+                <h2>Single Site Dashboard - SASS</h2>
                 <div class="dashboard-close"><i class="fa fa-times" aria-hidden="true"></i></div>
             </div>
             <div class="row">
