Add close button in sass form view

--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -272,3 +272,15 @@ h6 {
 #siteNoticeModal .close span {
     font-size: 20pt !important;
 }
+
+#siteNoticeModal .modal-body {
+    max-height: 600px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+@media (min-width: 600px) {
+    #siteNoticeModal .modal-dialog {
+        max-width: 550px;
+    }
+}
