--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -51,6 +51,9 @@
             </div>
         {% endif %}
         <div class="site-code pull-right">
+            <div class="sass-form-close-container">
+                <div class="sass-form-close"><i class="fa fa-times" aria-hidden="true"></i></div>
+            </div>
             Site code/name : {{ site_code }}
             <br/>
             Sass version : {{ sass_version }}
