--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -106,6 +106,17 @@
                     </button>
                 </div>
             </div>
+            {% if site_id %}
+            <div class="form-group row">
+                <label for="site_name"
+                       class="col-sm-2 col-form-label col-form-label">Original Site Code</label>
+                <div class="col-sm-6">
+                    <input type="text" name="site_code" id="site_code"
+                           class="form-control form-control-sm"
+                           placeholder="" value="{% if legacy_site_code %}{{ legacy_site_code }}{% else %}-{% endif %}" disabled>
+                </div>
+            </div>
+            {% endif %}
             <div class="form-group row">
                 <label for="site_name"
                        class="col-sm-2 col-form-label col-form-label">Geomorphological Zone</label>
