add info for ecological category and legend

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -198,3 +198,10 @@ body {
     font-weight: bold;
     padding: 10px;
 }
+
+.ecological-legend-info {
+    font-size: 9pt;
+    margin-top: 5pt;
+    color: grey;
+    font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
