--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="vertical-space"></div>
                 <div class="chart-container ajax-container">
-                    <div class="table-title">
+                    <div class="table-title" data-toggle="tooltip" data-placement="top" title="Ecological categories are based on interpretation of SASS data using Dallas (2007) SASS data interpretation guidelines">
                         Ecological Category
                         <i data-download-title="Ecological Category"
                            data-toggle="tooltip" data-placement="left"
@@ -158,6 +158,7 @@
                     </div>
                     <div class="ecological-legend-container">
                     </div>
+                    <center><div class="ecological-legend-info">A: Natural - B: Good - C: Fair - D: Poor - E/F: Seriously/Critically modified</div></center>
                     <div id="ecological-chart-container" class="row"></div>
                     <div class="ecological-alert-container">
                         <div class="ecological-alert alert alert-warning"
@@ -167,6 +168,7 @@
                             charts. Combinations not displayed :
                         </div>
                     </div>
+                    <div class="ecological-legend-info">Ecological categories are based on interpretation of SASS data using Dallas (2007) SASS data interpretation guidelines</div>
                 </div>
                 <div class="vertical-space"></div>
                 <div class="table-container ajax-container">
