--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -283,6 +283,8 @@
                         <div class="chart-title">Ecological category</div>
                         <div class="ecological-chart-header">-</div>
                         <canvas id="ecological-category-chart"></canvas>
+                        <center><div class="ecological-legend-info">A: Natural - B: Good - C: Fair - D: Poor - E/F: Seriously/Critically modified</div></center>
+                        <div class="ecological-legend-info">Ecological categories are based on interpretation of SASS data using Dallas (2007) SASS data interpretation guidelines</div>
                     </div>
                     <div class="vertical-space"></div>
                     <div class="table-container">
