add source reference form

--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -276,7 +276,7 @@
         <div class="submit-wrapper">
             <input type="button" name="btn" id="submitBtn" data-toggle="modal"
                    data-target="#confirm-submit" class="btn btn-info"
-                   value="Submit">
+                   value="Next">
         </div>
 
         <div class="modal fade" id="confirm-submit" tabindex="-1" role="dialog"
