add form for create new database

--- a/bims/templates/source_references/source_reference_page.html
+++ b/bims/templates/source_references/source_reference_page.html
@@ -49,9 +49,14 @@
         }
 
     </style>
+
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
 {% endblock %}
 
 {% block body_content %}
+     {% include "source_references/new_database_record_modal.html" %}
     {% if sessions %}
         <!-- Modal -->
         <div id="session-modal" class="modal fade" role="dialog">
@@ -148,7 +153,9 @@
                                     </select>
                                 </td>
                                 <td style="width: 46px;">
-                                    <button type="button" class="btn btn-primary">Add new ...</button>
+                                    <input type="button" name="btn" data-toggle="modal"
+                                           data-target="#new-database-record-modal" class="btn btn-primary"
+                                           value="Add new ...">
                                 </td>
                         </table>
                     </div>
@@ -195,10 +202,6 @@
 {% block foot %}
 
     <!-- Plugin JavaScript -->
-    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
-    <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
-    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/non_requirejs/source_reference_form.js" %}"></script>
 
     <script>
