Fix download csv not working for older data

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="taxon-detail-dashboard-template">
-    <div id="detailed-site-dashboard-wrapper" style="padding: 1rem;">
+    <div id="detailed-site-dashboard-wrapper">
         <div class="loading-dashboard">
             <img src="/static/img/small-loading.svg" width="250"
                  alt="Loading view">
@@ -254,7 +254,7 @@
 </script>
 
 <script type="text/html" id="detailed-site-dashboard">
-    <div id="detailed-site-dashboard-wrapper" style="padding: 1rem;">
+    <div id="detailed-site-dashboard-wrapper">
         <div class="loading-dashboard">
             <img src="/static/img/small-loading.svg" width="250"
                  alt="Loading view">
