--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -8,7 +8,10 @@
     overflow-y: auto;
     z-index: 10000;
     background: white;
-    border: 3px solid black;
+}
+
+#detailed-site-dashboard-wrapper {
+    padding: 3rem;
 }
 
 .detailed-dashboard-title {
