--- a/bims/templates/source_references/source_reference_page.html
+++ b/bims/templates/source_references/source_reference_page.html
@@ -52,8 +52,8 @@
             padding-right: 15px;
         }
 
-        form input, form button {
-            height: calc(2.25rem + 2px);
+        form input, form button, form select {
+            height: calc(2.25rem + 2px) !important;
         }
 
         form table tr td:nth-child(2) {
@@ -69,9 +69,15 @@
         }
 
     </style>
+
+    <!-- Plugin JavaScript -->
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
 {% endblock %}
 
 {% block body_content %}
+    {% include "source_references/new_document_modal.html" %}
     {% if sessions %}
         <!-- Modal -->
         <div id="session-modal" class="modal fade" role="dialog">
@@ -153,7 +159,9 @@
                                     </small>
                                 </td>
                                 <td style="width: 46px;">
-                                    <button type="button" class="btn btn-primary">Upload new ...</button>
+                                    <input type="button" name="btn" data-toggle="modal"
+                                           data-target="#new-document-modal" class="btn btn-primary"
+                                           value="Upload new ...">
                                 </td>
                         </table>
                     </div>
@@ -220,12 +228,6 @@
 
 {% endblock %}
 {% block foot %}
-
-    <!-- Plugin JavaScript -->
-    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
-    <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
-    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/non_requirejs/source_reference_form.js" %}"></script>
 
     <script>
